# remote-execution-nix

./: .gitignore  Cargo.toml  README.md  flake.nix  remote-build.sh
crates/drv-adapter/: Cargo.toml
crates/drv-adapter/.cargo/: config.toml
crates/drv-adapter/src/: main.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: lib.rs  main.rs
generator/: Cargo.toml
generator/src/: main.rs
