[package]
name = "drv-adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
bincode = "1.3.3"
fs_extra = "1.3.0"
nix-remote.workspace = true
ring = "0.17.7"
serde = "1.0.197"
walkdir.workspace = true
