[package]
name = "nix-rev2"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
bincode = { version = "1.3.3", default-features = false }
futures = "0.3.30"
nix-remote.workspace = true
prost = "0.12.3"
prost-types = "0.12.3"
ring = "0.17.7"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.35.0", features = ["rt-multi-thread", "macros"] }
tonic = "0.10.2"
uuid = { version = "1.7.0", features = ["v4"] }
